starting to make articles launch in iframe instead of bouncing out of page

--- a/style.css
+++ b/style.css
@@ -134,3 +134,10 @@ svg:not(:root) {
     bottom: 0px;
     width: 100%;
 }
+
+.iframe{
+        z-index: 99;
+    background-color: red;
+    width: 600px;
+    height: 400px;
+}
