added close button to tool-tip, not functioning yet. also started working on a cirlce-legend. the link button is not working either

--- a/style.css
+++ b/style.css
@@ -159,3 +159,19 @@ svg:not(:root) {
       font-size: 16px;
       line-height: 20px;
     }
+
+    .tool-score{
+        float: right;
+    }
+
+    .tool-link{
+        float: right;
+    }
+
+    .tooltip{
+        font-size: 0.9em;
+    }
+
+    .divider{
+        margin: 5px;
+    }
