--- a/style.css
+++ b/style.css
@@ -97,9 +97,6 @@ svg:not(:root) {
     text-align: center;
 }
 
-#formbox{
-    margin: auto;
-}
 
 .bubcontainer{
     background-color: white;
@@ -210,8 +207,9 @@ svg:not(:root) {
 }
 
 #legend-svg circle{
-    fill: grey;
+    fill: #eaeaea;
     stroke: black;
+    stroke-dasharray: 2, 2;
 }
 
 .footnote{
